# vivox-rs

./: .gitignore  Cargo.toml  README.md  build.rs
src/: lib.rs  main.rs  vivox.h
vivox_rs/: Cargo.toml
vivox_rs/src/: helpers.rs  lib.rs  main.rs  tokengen.rs
vivox_rs/src/error/: mod.rs
vivox_rs/src/sessiongroup/: mod.rs
vivox_rs_sys/: Cargo.toml  build.rs
vivox_rs_sys/src/: lib.rs
