[package]
name = "vivox-rs"
version = "0.1.0"
authors = ["Joseph Zurowski <Dunklheit@users.noreply.github.com>"]
license = "Unlicense"
edition = "2018"

[lib]
name = "vivoxrs"
# crate-type = ["cdylib"]

[[bin]]
name = "vivoxrs_test_client"
path = "src/main.rs"

[build-dependencies]
bindgen = "0.54.1"

[dependencies]
data-encoding = "2.3.0"
futures = "0.3.5"
hmac = "0.8.1"
serde = { version = "1.0.114", features = ["derive"]}
serde_json = "1.0.57"
sha2 = "0.9.1"
tokio = { version = "0.2.22", features = ["full"]}
