[package]
name = "vivox_rs"
version = "0.0.1"
authors = ["Joseph Zurowski <Dunklheit@users.noreply.github.com>"]
license = "Unlicense"
edition = "2018"
description = "Safe wrapper for the Vivox Core SDK"
repository = "https://github.com/MOONMOONOSS/vivox-rs"
keywords = ["vivox", "sdk", "voip", "voice", "chat"]
categories = ["api-bindings", "game-engines"]

[lib]
name = "vivox_rs"

[[bin]]
name = "vivox_rs_test_client"
path = "src/main.rs"

[dependencies]
data-encoding = "2.3.0"
futures = "0.3.5"
hmac = "0.8.1"
serde = { version = "1.0.114", features = ["derive"]}
serde_json = "1.0.57"
sha2 = "0.9.1"
tokio = { version = "0.2.22", features = ["full"]}
vivox_rs_sys = { path = "../vivox_rs_sys", version = "0.0.1" }
