[package]
name = "vivox_rs_sys"
version = "0.0.1"
authors = ["Joseph Zurowski <Dunklheit@users.noreply.github.com>"]
license = "Unlicense"
edition = "2018"
description = "Low-level bindings for the Vivox Core SDK"
repository = "https://github.com/MOONMOONOSS/vivox-rs"
keywords = ["vivox", "sdk", "voip", "voice", "text", "chat"]
categories = ["external-ffi-bindings", "game-engines"]
build = "build.rs"

[build-dependencies]
bindgen = "0.54.1"

[dependencies]
data-encoding = "2.3.0"
futures = "0.3.5"
hmac = "0.8.1"
serde = { version = "1.0.114", features = ["derive"]}
serde_json = "1.0.57"
sha2 = "0.9.1"
tokio = { version = "0.2.22", features = ["full"]}
