[package]
name = "vivox_rs_sys"
version = "5.9.0"
authors = ["Joseph Zurowski <Dunklheit@users.noreply.github.com>"]
license = "Unlicense"
edition = "2018"
description = "Low-level bindings for the Vivox Core SDK"
repository = "https://github.com/MOONMOONOSS/vivox-rs"
keywords = ["vivox", "sdk", "voip", "voice", "chat"]
categories = ["external-ffi-bindings", "game-engines"]
build = "build.rs"

[build-dependencies]
bindgen = "0.54.1"
